<resources>
    <string name="app_name">SeniorProject2</string>
    <string name="score">0</string>
    <string name="play">PLAY</string>
    <string name="settings">SETTINGS</string>
    <string name="quit">QUIT</string>
    <string name="logo">Anti-Clicker Logo</string>
    <string name="upgrade">Upgrade</string>
    <string name="power">Power: </string>
    <string name="price">Price: </string>
    <string name="count">Count: </string>
    <string name="autoScore">Inc: </string>
    <string name="decAutoScore">Dec: </string>
    <string name="buy">BUY</string>
    <string name="bottom_bar_desc">The bottom bar of the game used to open the upgrades menu</string>
    <string name="muteM">Mute Music</string>
    <string name="muteS">Mute Sound FX</string>
    <string name="back_button">Back</string>
</resources>