<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/mainScreen">

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:textAlignment="center"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap">
    </TextView>

    <ImageView
        android:id="@+id/bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:minHeight="32dp"
        android:src="@drawable/bottom_sheet_bar"
        app:layout_constraintTop_toBottomOf="@id/score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/bottom_bar_desc"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottom_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/upgradesList"
        tools:ignore="VisualLintBounds">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/upgradesListB"
            android:background="@color/black_overlay">

            <TextView
                android:id="@+id/upgrade0Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/upgrade"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/upgradesListB"
                app:layout_constraintTop_toTopOf="@id/upgradesListB"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/power0Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:textSize="16sp"
                android:text="@string/power"
                app:layout_constraintStart_toEndOf="@id/upgrade0Text"
                app:layout_constraintTop_toTopOf="@id/upgradesListB"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/price0Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:text="@string/price"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/power0Text"
                app:layout_constraintTop_toTopOf="@id/upgradesListB"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/count0Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:text="@string/count"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/buyButton0"
                app:layout_constraintStart_toEndOf="@id/price0Text"
                app:layout_constraintTop_toTopOf="@id/upgradesListB"
                tools:ignore="VisualLintBounds" />

            <Button
                android:id="@+id/buyButton0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/buy"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@id/upgradesListB"
                app:layout_constraintTop_toTopOf="@id/upgradesListB"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/upgrade1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:text="@string/upgrade"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/upgradesListB"
                app:layout_constraintTop_toBottomOf="@id/upgrade0Text"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/power1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="84dp"
                android:textSize="16sp"
                android:text="@string/power"
                app:layout_constraintStart_toEndOf="@id/upgrade1Text"
                app:layout_constraintTop_toTopOf="@id/power0Text"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/price1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="84dp"
                android:text="@string/price"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/power1Text"
                app:layout_constraintTop_toTopOf="@id/price0Text"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/count1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="16dp"
                android:text="@string/count"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/buyButton1"
                app:layout_constraintStart_toEndOf="@id/price1Text"
                app:layout_constraintTop_toTopOf="@id/count0Text"
                tools:ignore="VisualLintBounds" />

            <Button
                android:id="@+id/buyButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/buy"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@id/upgradesListB"
                app:layout_constraintTop_toBottomOf="@id/buyButton0"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/upgrade2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:text="@string/upgrade"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/upgradesListB"
                app:layout_constraintTop_toBottomOf="@id/upgrade1Text"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/power2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="84dp"
                android:textSize="16sp"
                android:text="@string/power"
                app:layout_constraintStart_toEndOf="@id/upgrade2Text"
                app:layout_constraintTop_toTopOf="@id/power1Text"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/price2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="84dp"
                android:text="@string/price"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/power2Text"
                app:layout_constraintTop_toTopOf="@id/price1Text"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/count2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="16dp"
                android:text="@string/count"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/buyButton2"
                app:layout_constraintStart_toEndOf="@id/price2Text"
                app:layout_constraintTop_toTopOf="@id/count1Text"
                tools:ignore="VisualLintBounds" />

            <Button
                android:id="@+id/buyButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/buy"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@id/upgradesListB"
                app:layout_constraintTop_toBottomOf="@id/buyButton1"
                tools:ignore="VisualLintBounds" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:contentDescription="@string/back_button"
        android:onClick="back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageView
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/body_64x64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auto_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/autoScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body" />

    <ImageView
        android:id="@+id/soul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/soul_64x64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dec_auto_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="64dp"
        android:text="@string/decAutoScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/soul" />

</androidx.constraintlayout.widget.ConstraintLayout>